Name:                blog-server
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable blog-server
  hs-source-dirs: src
  main-is: Main.hs

  Extensions: DeriveDataTypeable, MultiParamTypeClasses, FlexibleContexts, FlexibleInstances, Rank2Types, StandaloneDeriving
  
  Build-depends:
    containers                >= 0.5.5,
    unordered-containers      >= 0.2.4.0,
    vector                    >= 0.10.9.1,
    aeson                     >= 0.7.0.4,
    scientific                >= 0.2.0.2,
    hashable                  >= 1.2.2.0,
    uhc-util                  >= 0.1.5.5,
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.14    && < 0.15,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    transformers              >= 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.15,
    snap-core                 >= 0.9     && < 0.10,
    snap-server               >= 0.9     && < 0.10,
    snap-loader-static        >= 0.9     && < 0.10,
    clientsession             >= 0.9.1.1,
    snaplet-acid-state        >= 0.2.6,
    safecopy                  >= 0.8.5,
    acid-state                >= 0.12.4,
    blaze-html                >= 0.8.0.2,
    blaze-markup              >= 0.7.0.2,
    digestive-functors        >= 0.8,
    digestive-functors-blaze  >= 0.6.0.6,
    digestive-functors-heist  >= 0.8.6.2,
    digestive-functors-snap   >= 0.6.1.3,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.6,
    xmlhtml                   >= 0.1     && < 0.3

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 4.12

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
